tests/rosetta/out/C/active-directory-search-for-a-user.error
cc: exit status 1
/tmp/active-directory-search-for-a-user.c: In function ‘search_user’:
/tmp/active-directory-search-for-a-user.c:71:19: error: request for member ‘data’ in something not a structure or union
   71 |   return directory.data[username];
      |                   ^
/tmp/active-directory-search-for-a-user.c: In function ‘mochi_main’:
/tmp/active-directory-search-for-a-user.c:85:36: warning: passing argument 1 of ‘search_user’ makes integer from pointer without a cast [-Wint-conversion]
   85 |   __auto_type groups = search_user(&directory, "username");
      |                                    ^~~~~~~~~~
      |                                    |
      |                                    directory_item_t *
/tmp/active-directory-search-for-a-user.c:70:29: note: expected ‘int’ but argument is of type ‘directory_item_t *’
   70 | list_string search_user(int directory, char *username) {
      |                         ~~~~^~~~~~~~~
