tests/rosetta/out/C/active-directory-search-for-a-user.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:44Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
typedef struct {
  char *base;
  char *host;
  int port;
  char *group_filter;
} client_item_t;
typedef struct {
  int len;
  client_item_t *data;
} client_item_list_t;
client_item_list_t create_client_item_list(int len) {
  client_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(client_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  list_string username;
  list_string john;
} directory_item_t;
typedef struct {
  int len;
  directory_item_t *data;
} directory_item_list_t;
directory_item_list_t create_directory_item_list(int len) {
  directory_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(directory_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_string search_user(int directory, char *username) {
  return directory.data[username];
}

int mochi_main() {
  __auto_type client = (client_item_t){.base = "dc=example,dc=com",
                                       .host = "ldap.example.com",
                                       .port = 389,
                                       .group_filter = "(memberUid=%s)"};
  list_string tmp1 = list_string_create(2);
  tmp1.data[0] = "admins";
  tmp1.data[1] = "users";
  list_string tmp2 = list_string_create(1);
  tmp2.data[0] = "users";
  __auto_type directory = (directory_item_t){.username = tmp1, .john = tmp2};
  __auto_type groups = search_user(&directory, "username");
  if (groups.len > 0) {
    __auto_type out = "Groups: [";
    __auto_type i = 0;
    while (i < groups.len) {
      char *tmp3 = concat_string(out, "\"");
      char *tmp4 = concat_string(tmp3, groups.data[i]);
      char *tmp5 = concat_string(tmp4, "\"");
      out = tmp5;
      if (i < groups.len - 1) {
        char *tmp6 = concat_string(out, ", ");
        out = tmp6;
      }
      i = i + 1;
    }
    char *tmp7 = concat_string(out, "]");
    out = tmp7;
    printf("%s\n", out);
  } else {
    printf("User not found\n");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
